# django_rag

./: .env.example  .gitignore  LICENSE  README.md  django_rag_arquitetura_2.md  docker-compose-infra.yml  pyproject.toml  pyproject_tmp.toml
apps/accounts/: admin.py  apps.py  forms.py  models.py  oidc_backend.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/core/: exceptions.py  mixins.py  models.py  privacy_filter.py  rag_service.py  ragas_eval.py  reranker.py  tasks.py  tests.py  utils.py
apps/knowledge/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/knowledge/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docker/: download_bootstrap.py  fix_pkce.py  fix_redirect_uris.py  keycloak_setup.py
docker/postgres/: init.sql
templates/: base.html  home.html
templates/accounts/: profile.html
